crates/rspack_error/tests/fixtures/jsx_syntax_error/fixtures__jsx_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: jsx_syntax_error
---
error[jsx]: JSX parsing error
  ┌─ tests/fixtures/jsx_syntax_error/index.jsx:1:20
  │
1 │ let a = <test>/test>;
  │                    ^ Unexpected token. Did you mean `{'>'}` or `&gt;`?
2 │ 

error[jsx]: JSX parsing error
  ┌─ tests/fixtures/jsx_syntax_error/index.jsx:2:1
  │
1 │ let a = <test>/test>;
2 │ 
  │ ^ Unexpected eof


